--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,7 +1,9 @@
+@import '../../styles/colors.scss';
+
 .app {
   text-align: center;
   &__header {
-    background-color: #222;
+    background-color: $grayDark;
     height: auto;
     padding: 20px;
     color: white;
