--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -3,6 +3,7 @@
 .logo {
   width: 240px;
   height: 80px;
+  cursor: pointer;
   &__name {
     fill: $whiteSoft;
     transform: translate(80px, 0px) scale(2.5);
