--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -1,3 +1,11 @@
+@import '../../styles/colors.scss';
+
 .header {
   width: 100vw;
+  height: 500px;
+  background-color: $yellowDark;
+  .slogan {
+    fill: $whiteSoft;
+    transform: translate(85px, 70px) scale(0.3);
+  }
 }
