--- a/src/components/Header/Navbar/HeaderNavbar.scss
+++ b/src/components/Header/Navbar/HeaderNavbar.scss
@@ -1,15 +1,17 @@
 @import '../../../styles/colors.scss';
 
 .header-navbar {
+  position: fixed;
+  z-index: 9999999;
   background-color: transparent;
   height: auto;
   padding: 20px;
   width: 100%;
-  transition: all .2s;
+  transition: height .3s, padding .3s;
 
   &.sticky {
+    padding: 10px;
     background-color: $grayDark;
-    position: fixed;
     box-shadow: -10px 0px 15px 0px $grayDark;
   }
 }
