--- a/src/components/Header/Navbar/HeaderNavbar.scss
+++ b/src/components/Header/Navbar/HeaderNavbar.scss
@@ -7,11 +7,10 @@
   height: auto;
   padding: 20px;
   width: 100%;
-  transition: height .5s, padding .5s, background-color .5s;
+  transition: height .5s, padding .5s;
 
   &.sticky {
     padding: 10px;
-    background-color: $yellowDark;
-    box-shadow: -10px 0px 15px 0px $grayDark;
+    background-color: $whiteSoft;
   }
 }
